# libsecurityheaders

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
example/: securityheaders_example.cpp
include/: security_headers.h
test/src/: main.cpp  securityheaders_unittest.cpp
